--- a/lnmp.conf
+++ b/lnmp.conf
@@ -1,7 +1,7 @@
 
 Download_Mirror='https://soft.vpser.net'
 
-Nginx_Modules_Options=''
+Nginx_Modules_Options='--add-module=/usr/local/ngx_http_substitutions_filter_module --add-module=/usr/local/ngx_cache_purge --add-module=/usr/local/headers-more-nginx-module'
 PHP_Modules_Options=''
 
 ##MySQL/MariaDB database directory##
